Minor CSS tweak to fix footer on IE.

--- a/app/_scss/main.scss
+++ b/app/_scss/main.scss
@@ -176,13 +176,11 @@ header a.extra:hover {
 }
 
 footer {
-  max-width: 830px;
   height: 60px;
-  margin: 0 auto;
+  width: 100%;
   font-size: 80%;
   color: #666;
   background-color: white;
-  border-top: 1px solid $store;
   margin-top: 2em;
   overflow: hidden;
   text-transform: uppercase;
@@ -191,6 +189,12 @@ footer {
   right: 0;
   bottom: 0;
   left: 0;
+
+  .center {
+    max-width: 830px;
+    margin: 0 auto;
+    border-top: 1px solid $store;
+  }
 
   .contact {
     color: $store;
@@ -222,16 +226,6 @@ footer {
   footer .contact {
     text-align: center;
   }
-}
-
-footer .rss {
-  margin-top: 1.1em;
-  margin-right: -.2em;
-  float: right;
-}
-
-footer .rss img {
-  border: 0;
 }
 
 /*****************************************************************************/
